tests/base/invalid/If_CompileFail_2.whiley
import whiley.lang.*:*

bool f(bool z):
     if(z):
         return true
    else:
        return 0
